Migrating to JDK 11